--- a/testA/app.json
+++ b/testA/app.json
@@ -1,33 +1,1 @@
-{
-  "pages": [
-    "pages/testA/index/index",
-    "pages/testA/user/index"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle": "black"
-  },
-  "tabBar": {
-    "color": "#bfbfbf",
-    "selectedColor": "#63d7d2",
-    "borderStyle": "black",
-    "backgroundColor": "#fff",
-    "list": [
-      {
-        "pagePath": "pages/testA/index/index",
-        "text": "HOME",
-        "iconPath": "./images/home.png",
-        "selectedIconPath": "./images/home_active.png"
-      },
-      {
-        "pagePath": "pages/testA/user/index",
-        "text": "USER",
-        "iconPath": "./images/user.png",
-        "selectedIconPath": "./images/user_active.png"
-      }
-    ]
-  },
-  "sitemapLocation": "sitemap.json"
-}
+{"pages":["pages/testA/index/index","pages/testA/user/index"],"window":{"backgroundTextStyle":"light","navigationBarBackgroundColor":"#fff","navigationBarTitleText":"WeChat","navigationBarTextStyle":"black"},"tabBar":{"color":"#bfbfbf","selectedColor":"#63d7d2","borderStyle":"black","backgroundColor":"#fff","list":[{"pagePath":"pages/testA/index/index","text":"HOME","iconPath":"./images/home.png","selectedIconPath":"./images/home_active.png"},{"pagePath":"pages/testA/user/index","text":"USER","iconPath":"./images/user.png","selectedIconPath":"./images/user_active.png"}]}}
