--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "miniprogramRoot": "dist/",
+  "miniprogramRoot": "",
   "projectname": "floorMaster",
   "description": "楼掌门之小程序",
   "appid": "wxc1bc398b8f605514",
