--- a/project.tt.json
+++ b/project.tt.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./",
   "projectname": "floorMaster",
-  "description": "楼掌门之小程序",
+  "description": "一套代码多个小程序项目",
   "appid": "touristappid",
   "setting": {
     "urlCheck": true,
