--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@tarojs/shared": "3.5.4",
     "@tarojs/taro": "3.5.4",
     "@tarojs/taro-h5": "3.5.4",
+    "postcss": "^8.4.16",
+    "postcss-pxtorem": "^6.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "taro-hooks": "latest"
