--- a/testB/weapp/project.config.json
+++ b/testB/weapp/project.config.json
@@ -1,8 +1,7 @@
 {
-  "miniprogramRoot": "",
+  "miniprogramRoot": "./",
   "projectname": "floorMaster",
-  "description": "楼掌门之小程序",
-  "appid": "wxc1bc398b8f605514",
+  "description": "小程序项目集成",
   "setting": {
     "urlCheck": true,
     "es6": false,
@@ -16,24 +15,11 @@
     "coverView": true,
     "showShadowRootInWxmlPanel": false,
     "scopeDataCheck": false,
-    "useCompilerModule": false,
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
-    }
+    "useCompilerModule": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {},
-  "libVersion": "2.25.4",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
-  "editorSetting": {
-    "tabIndent": "insertSpaces",
-    "tabSize": 2
-  }
+  "appid": "wxc1bc398b8f605514"
 }
