first to commit

--- a/project.config.json
+++ b/project.config.json
@@ -21,5 +21,5 @@
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {},
-  "appid": "wxc1bc398b8f605514"
+  "appid": "wxe10982070733ace7"
 }
