--- a/testB/weapp/app.json
+++ b/testB/weapp/app.json
@@ -1,1 +1,33 @@
-{"pages":["pages/testB/index/index","pages/testB/user/index"],"window":{"backgroundTextStyle":"light","navigationBarBackgroundColor":"#63d7d7","navigationBarTitleText":"WeChat","navigationBarTextStyle":"white"},"tabBar":{"color":"#bfbfbf","selectedColor":"#63d7d2","borderStyle":"black","backgroundColor":"#fff","list":[{"pagePath":"pages/testB/index/index","text":"HOME","iconPath":"./images/home.png","selectedIconPath":"./images/home_active.png"},{"pagePath":"pages/testB/user/index","text":"USER","iconPath":"./images/user.png","selectedIconPath":"./images/user_active.png"}]}}
+{
+  "pages": [
+    "pages/testB/index/index",
+    "pages/testB/user/index"
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#63d7d7",
+    "navigationBarTitleText": "WeChat",
+    "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "color": "#bfbfbf",
+    "selectedColor": "#63d7d2",
+    "borderStyle": "black",
+    "backgroundColor": "#fff",
+    "list": [
+      {
+        "pagePath": "pages/testB/index/index",
+        "text": "HOME",
+        "iconPath": "./images/home.png",
+        "selectedIconPath": "./images/home_active.png"
+      },
+      {
+        "pagePath": "pages/testB/user/index",
+        "text": "USER",
+        "iconPath": "./images/user.png",
+        "selectedIconPath": "./images/user_active.png"
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json"
+}
